Improve coding of mvc pattern